force-app/main/default/objects/Connected_App_Inventory__c/fields/App_External_Id__c.field-meta.xml
<CustomField>
    <fullName>App_External_Id__c</fullName>
    <label>App External Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>