force-app/main/default/objects/Connected_App_Inventory__c/fields/App_Name__c.field-meta.xml
<CustomField>
    <fullName>App_Name__c</fullName>
    <label>App Name</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <unique>true</unique>
</CustomField>