force-app/main/default/objects/Connected_App_Inventory__c/fields/App_Type__c.field-meta.xml
<CustomField>
    <fullName>App_Type__c</fullName>
    <label>App Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
                <default>true</default>
                <label>Custom (Internally Built)</label>
            </value>
            <value>
                <fullName>Managed</fullName>
                <label>Managed Package (Third-Party)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>