force-app/main/default/objects/Connected_App_Inventory__c/fields/Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner__c</fullName>
    <label>Business Owner</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Business Owner</relationshipLabel>
    <relationshipName>Business_Owner</relationshipName>
    <required>true</required>
</CustomField>