force-app/main/default/objects/Connected_App_Inventory__c/fields/Connected_App_Name__c.field-meta.xml
<CustomField>
    <fullName>Connected_App_Name__c</fullName>
    <label>Connected App Name</label>
    <length>255</length>
    <required>true</required>
    <unique>true</unique>
    <type>Text</type>
</CustomField>