force-app/main/default/objects/Connected_App_Inventory__c/fields/Decommission_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decommission_Reason__c</fullName>
    <label>Decommission Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Redundant Functionality</fullName>
            </value>
            <value>
                <fullName>Vendor Replaced</fullName>
            </value>
            <value>
                <fullName>Low Adoption</fullName>
            </value>
            <value>
                <fullName>Security Risk</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>