force-app/main/default/objects/Connected_App_Inventory__c/fields/High_Risk_Permissions_Justification__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Permissions_Justification__c</fullName>
    <label>High Risk Permissions Justification</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>