force-app/main/default/objects/Connected_App_Inventory__c/fields/Last_Used_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Used_Date__c</fullName>
    <label>Last Used Date</label>
    <type>Date</type>
</CustomField>