force-app/main/default/objects/Connected_App_Inventory__c/fields/Risk_Classification__c.field-meta.xml
<CustomField>
    <fullName>Risk_Classification__c</fullName>
    <label>Risk Classification</label>
    <type>MetadataRelationship</type>
    <required>true</required>
    <referenceTo>App_Risk_Classification__mdt</referenceTo>
</CustomField>