force-app/main/default/objects/Connected_App_Inventory__c/fields/Technical_Owner__c.field-meta.xml
<CustomField>
    <fullName>Technical_Owner__c</fullName>
    <label>Technical Owner</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Technical Owner</relationshipLabel>
    <relationshipName>Technical_Owner</relationshipName>
    <required>true</required>
</CustomField>